Fixed colors, added states
The directions were not clear what desired changes were, directions were incomplete and confusing.

--- a/css-a11y1.html
+++ b/css-a11y1.html
@@ -20,20 +20,39 @@
         text-decoration: none;
         color: #666;
         outline: none;
+        background-color: white;
+        border: 1px solid white;
       }
+
+      a:link {
+        background-color: white;
+        color: blue;
+      }
+
+      a:visited {
+        background-color: white;
+        color: purple;
+        border-color: white;
+      }
+
+      a:hover {
+        background-color: lightgoldenrodyellow;
+        color: green;
+      }
+
     </style>
   </head>
 
   <body>
 
-    <ol>
-      <li><a href="">Animals</a></li>
-      <li><a href="">Computers</a></li>
-      <li><a href="">Diversity and inclusion</a></li>
-      <li><a href="">Food</a></li>
-      <li><a href="">Medicine</a></li>
-      <li><a href="">Music</a></li>
-    </ol>
+    <ul>
+      <li><a href="#">Animals</a></li>
+      <li><a href="#">Computers</a></li>
+      <li><a href="#">Diversity and inclusion</a></li>
+      <li><a href="#">Food</a></li>
+      <li><a href="#">Medicine</a></li>
+      <li><a href="#">Music</a></li>
+    </ul>
 
   </body>
 
