--- a/css-a11y2.html
+++ b/css-a11y2.html
@@ -18,23 +18,24 @@
 
       main {
         padding: 20px;
-        background-color: red;
+        background-color: papayawhip;
+        border-radius: 5%;
       }
 
       h1, h2, p {
-        color: #999;
+        color: black;
       }
 
       h1 {
-        font-size: 2vw;
+        font-size: 2rem;
       }
 
       h2 {
-        font-size: 1.5vw;
+        font-size: 1rem;
       }
 
       p {
-        font-size: 1.2vw;
+        font-size: 1em;
       }
     </style>
   </head>
